fix user getting
